--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <!--Main Content-->
     <div class="About-me">
         <p>
-            My name is Rushela Perera. I am a Computer Science Student based in Colombo Sri Lanka working towards to being a Web Developer. I am a passionate self driven student. I enjoy what I do, and adore the creative process in creating websites.</p>
+            My name is Rushela Perera. I am a Computer Science Student based in Colombo Sri Lanka working towards to being a Web Developer. I am a passionate self driven student. I enjoy what I do, and I adore the creative process in creating websites.</p>
 
         <p>
             I had my primary and secondary education in <a href="https://www.bishopscollege.lk/" target="_blank">Bishops' College Colombo 3</a>. I completed my GCE Ordinary Level Examination in May 2022 where I obtained 7A passes and 2B passes. Next I enrolled in the <a href="https://www.iit.ac.lk/" target="_blank">Informatics Institute of Technology.</a> where i completed my foundation in Computing with a merti pass. I am currently and undergradute studying at IIT affliated with the <a href="https://www.westminster.ac.uk/" target="_blank">University of Westminster </a> UK doing my BSc in Computer Science </p>
