--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="main.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
+        <a href="main.html#contact">Contact</a>
          </div>   
     </div>
 
