--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
         <a href="main.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
+        <a href="#contact">Contact</a>
          </div>   
     </div>
 
@@ -43,7 +44,7 @@
     </div>
     
     <!--Contact Information--> 
-    <div class="contact">
+    <div id="contact">
         <h2>Contact Me</h2>
         <p>If you have any questions or would like to reach out, please use the form below</p>
 
