adding a placeholder for the contact

--- a/main.html
+++ b/main.html
@@ -49,14 +49,14 @@
         <p>If you have any questions or would like to reach out, please use the form below</p>
 
         <form action="#" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+            <label for="name"></label>
+            <input type="text" id="name" name="name" required placeholder="Name">
             <br> <!--to take the email to the next line--> 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="email"></label>
+            <input type="email" id="email" name="email" required placeholder="Email">
             <br> <!--to take the message to the next line--> 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
+            <label for="message"></label>
+            <textarea id="message" name="message" required placeholder="Message"></textarea>
             <br>
             <input type="submit" value="Submit">
         </form>
