Styled the submit button

--- a/main.html
+++ b/main.html
@@ -56,9 +56,9 @@
             <input type="email" id="email" name="email" required placeholder="Email">
             <br> <!--to take the message to the next line--> 
             <label for="message"></label>
-            <textarea id="message" name="message" required placeholder="Message"></textarea>
+            <textarea id="message" name="message" required placeholder="Message" rows="5" cols="45"></textarea>
             <br>
-            <input type="submit" value="Submit">
+            <button type="submit" onclick="alert('Form Submitted!')" >Submit</button>
         </form>
     </div>
 
