Adding the Gallery

--- a/projects.html
+++ b/projects.html
@@ -61,9 +61,30 @@
         <!--Adding pictures related to the blog-->
         <div class="gallery">
             <a target="_blank" href="Blog1/Menu.png">
-                <img src="Blog1/Menu.png" alt="Menu">
+                <img src="Blog1/Menu.png" alt="Menu" width="600" height="400">
             </a>
             <div class="desc">Menu of the Plane Seat Management System</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="Blog1/Seating_Plan.png.">
+                <img src="Blog1/Seating_Plan.png" alt="Seating_Plan" width="600" height="400">
+            </a>
+            <div class="desc">Seating Plan of the Plane Seat Management System</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="Blog1/Reserve_Seat.png">
+                <img src="Blog1/Reserve_Seat.png" alt="Reserve_Seat" width="600" height="400">
+            </a>
+            <div class="desc">Reserving a seat in the Plane Seat Management System</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="Blog1/Cancelled_Seat.png">
+                <img src="Blog1/Cancelled_Seat.png" alt="Cancelled_Seat" width="600" height="400">
+            </a>
+            <div class="desc">Cancelling a seat in the Plane Seat Management System</div>
         </div>
 
 
