Correcting the image

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="gallery">
-            <a target="_blank" href="Blog1/Seating_Plan.png.">
+            <a target="_blank" href="Blog1/Seating_Plan.png">
                 <img src="Blog1/Seating_Plan.png" alt="Seating_Plan" width="800" height="800">
             </a>
             <div class="desc">Seating Plan of the Plane Seat Management System</div>
